[package]
name = "silk"
version = "0.1.0"
edition = "2024"

[dependencies]
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["attributes"] }

[dev-dependencies]
tracing-subscriber = "0.3.23"
